# reqtracker

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  RELEASE_NOTES_v1.0.7.md  final_v107_test.py  pyproject.toml  requirements-dev.txt
.github/workflows/: main.yml
docs/: README.md
docs/api/: README.md  cli.md  config.md  dynamic-tracker.md  generator.md  main-api.md  mappings.md  static-analyzer.md  tracker.md  utils.md
docs/cli/: README.md
docs/guides/: configuration.md
examples/: README.md
examples/advanced/: Jenkinsfile  custom_config.py  github_actions.yml  gitlab_ci.yml
examples/basic/: cli_examples.sh  simple_usage.py
examples/config_examples/: basic.reqtracker.toml  data_science.reqtracker.toml  django.reqtracker.toml
examples/data_science/: jupyter_notebooks.py
examples/web_development/: django_project.py  flask_app.py
reqtracker/: __init__.py  config.py  core.py  exceptions.py  output.py  tracker.py
src/reqtracker/: __init__.py  dynamic_tracker.py  mappings.py  tracker.py  utils.py
tests/: test_config.py  test_init.py  test_tracker.py  test_utils.py
tests/fixtures/simple_project/: app.py
tests/integration/: README.md  test_cli_integration.py  test_cross_platform.py  test_performance.py  test_real_projects.py
