[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "reqtracker"
version = "0.1.0"
description = "Automated Python dependency tracking and requirements.txt generation"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Oleksii Shcherbak", email = "oleksii_shcherbak@icloud.com"},
]
keywords = ["dependencies", "requirements", "tracking", "automation", "development"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "tomli >= 2.0.0 ; python_version < '3.11'",
]

[project.urls]
Homepage = "https://github.com/oleksii-shcherbak/reqtracker"
Repository = "https://github.com/oleksii-shcherbak/reqtracker"
Issues = "https://github.com/oleksii-shcherbak/reqtracker/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
